fix nav button on ios

--- a/frontend/src/Nav/nav.css
+++ b/frontend/src/Nav/nav.css
@@ -53,7 +53,7 @@
   border-radius: 4px;
   color: #182C45;
   height: 36px;
-  width: 170px;
+  width: 175px;
   font-size: 15px;
   border: none;
   padding-bottom: 3px;
